# venmo-client

./: .gitignore  README.md  default.nix  pyproject.toml  shell.nix
venmo_client/: __init__.py  auth.py  cli.py  client.py  console.py  util.py
venmo_client/model/: __init__.py  transaction.py  user.py
