[tool.poetry]
name = "venmo-client"
version = "0.1.0"
description = ""
authors = ["Sharad Vikram <sharad.vikram@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
